# python-project-50

./: .gitignore  Makefile  README.md  Tox.ini  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: build.yml  gendiff-check.yml
gendiff/: __init__.py  generate.py  generate_diff.py
gendiff/formatters/: format.py  json_formater.py
gendiff/scripts/: file_parse.py  format.py  gendiff.py  generate.py  generate_diff.py
gendiff/scripts/format/: format.py  json_formater.py  plain_formater.py  stylish_formater.py
tests/: test_gendiff.py
tests/test_data/: f2_gr_tru.txt  f2_ground_truth.txt  filepath2_ground_truth.json  filepath2_ground_truth.txt  filepath2_yml_ground_truth.txt  fpath2_gr_tru.txt  fpath2_yml_gr_tru.txt
