[project]
name = "hexlet-code"
version = "0.1.0"
authors = [{name = "Галичанина Елена", email = "jpinkmann@mail.ru"}]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts] 
gendiff = "gendiff.scripts.gendiff:main"
